--- a/Coder_Quizz/package.json
+++ b/Coder_Quizz/package.json
@@ -1,16 +1,16 @@
 {
-  "homepage": "https://SaraFreitas-dev.github.io/Coder_Quizz",
+ 
   "name": "coder-quizz",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist",
+        "build": "vite build",
+        "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
